# MPointer

./: CMakeLists.txt  MPLinkedList.cpp  MPLinkedList.h  MPointer.h  MemoryManager.cpp  MemoryManager.h  MemoryManager.hpp  Proyecto.C  PruebaDumps.txt  PruebaGeneral.txt  PruebaListaEnlazada.txt  main.cpp  memory_manager_server.cpp
Proto/: memory_manager.grpc.pb.cc  memory_manager.grpc.pb.h  memory_manager.pb.cc  memory_manager.pb.h  memory_manager.proto
dumps/: 2025-04-08_20-18-03-004.txt  2025-04-08_20-21-23-918.txt  2025-04-08_20-21-23-919.txt  2025-04-08_20-22-13-336.txt  2025-04-10_07-14-05-609.txt  2025-04-10_07-14-05-610.txt
output/: MemoryManager  Proyecto  main  test
